# MathStatisticalAnalysis

./: .gitignore  README.md  pyproject.toml
.ai/ai-context/: PROJECT_CONTEXT.md  PROJECT_PROFILE.md  RUNBOOK.md
.ai/ai-memory/: MEMORY_LOG.md
.github/workflows/: ci.yml
contracts/: README.md  openapi.json
contracts/evidence/: approved_ranking_policy_registry.json  canonical_evidence_registry.json  dataset_snapshot.schema.json  metric_definition.schema.json  ranking_policy.schema.json  strategy_evaluation_evidence.schema.json
contracts/normalization/: dataset_normalization_manifest.schema.json
data/: README.md
docs/: README.md  ownerinit.md
docs/architecture/: evaluation-evidence-contract.md  source-to-snapshot-normalization-contract.md  system.md
docs/audits/: lotterynew-baseline.md  lotterynew-wiki-integrity.md  p600ab-phase-s-snapshot-stop.md
docs/capabilities/: catalog.yaml  legacy-entrypoints.yaml
docs/decisions/: ADR-0001-new-repo-location.md  ADR-0002-single-doc-entry.md  ADR-0003-language-and-toolchain.md  ADR-0004-project-name-and-scope.md
docs/integrations/: external-agent-dependencies.yaml
docs/migration/: migration-ledger.yaml  p600-plan.md
docs/provenance/: big-lotto-rule-contract.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  (+1 more)
tests/: test_capability_catalog.py
tools/: build_legacy_entrypoints.py  export_legacy_p600b_fixtures.py  generate_evidence_schemas.py  generate_normalization_schemas.py  import_snapshot.py  validate_capability_catalog.py  validate_evaluation_evidence.py
(+308 files in other folders)
